build.gradle.kts    -Добавил task который убирает предупреждение в консоли
Создал пакет views для вьющек
    - Создал OperationView.kt
    - Создал MainView.kt
    - Создал StorageView.kt
Создал пакет viewmodels
    - Создал OperationViewModel.kt
    - Создал StorageViewModel.kt
Выделил работу с данными в пакет repository
    - Создал OperationRepository.kt
    - Создал StorageRepository.kt
Выделил подключение к базе в отдельный пакет database
    - Создал DatabaseProvider.kt
Добавил к доменной модели Category.kt свойство - id
Operation.kt
    - Добавил к абстрактному классу Operation абстрактное свойство - id
    - Добавил к абстрактному классу абстрактный метод - printOperation
    -Сделал реализацию в классах наследниках
operations.sq
    - Поудалял запросы на выборку данных который возвращали поля зависимых таблиц как ID
    - Добавил запрос selectFullOperations который возвращает все операции и все данные на глубину 1
    - Добавил запрос selectFullOperationsByToStorages
    - Добавил запрос selectFullOperationsByFromStorages